--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
   body {
     font-family: Arial;
     padding: 10px;
+    border: solid 2px red;
   }
   
   h2{
@@ -96,23 +97,8 @@ a:hover{
  img{
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
  }
-
   
-  /* Create two unequal columns that floats next to each other--------------------------------------------- */
-  /* Left column */
-  .leftcolumn {   
-    float: left;
-    width: 35%;
-    margin-left: 25px;
-  }
-  
-  /* Right column ----------------------------------------------------------------------------------------*/
-  .rightcolumn {
-    float: left;
-    width: 25%;
-  }
-  
-    /* Fake image --------------------------------------------- --------------------------------------------- */
+ /* Fake image --------------------------------------------- --------------------------------------------- */
     .fakeimg {
       background-color: #aaa;
       width: 100%;
@@ -139,13 +125,27 @@ a:hover{
       transition: .2s;
     }
   
-  /* Clear floats after the columns */
-  .row:after {
-    content: "";
-    display: table;
-    clear: both;
+ 
+  /* columns*/
+  /* this will work when the float isnt on*/
+  .maincolumn{
+    border: solid 2px red;
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
   }
+  .column{
+      width: 30%;
+    }
   
+    
+    /* Responsive layout - makes a one column layout instead of a two-column layout */
+    @media (max-width: 800px) {
+      .maincolumn {
+        flex-direction: column;
+      }
+      
+      /*-------------------------------------------/
   /* Footer */
   .footer {
     padding: 20px;
@@ -155,7 +155,7 @@ a:hover{
   
   /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
   @media screen and (max-width: 800px) {
-    .leftcolumn, .rightcolumn {   
+    .column {   
       width: 100%;
       padding: 0;
     }
