--- a/style.css
+++ b/style.css
@@ -78,11 +78,6 @@ a:hover{
   border:solid 1px #f7f7f7;
   transition: .2s;
 }
- /*Animated Gifs ---------------------------------------------------------- */
- .gif{
-   width: 100%;
-   height: 100%;
- }
 
  img{
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
@@ -106,6 +101,7 @@ a:hover{
 
   .card h2{
     border: solid 1px #011627;
+    margin-bottom: 5px;
   }
 
   .card h2:hover{
@@ -113,8 +109,11 @@ a:hover{
       color: #f7f7f7;
       border:solid 1px #f7f7f7;
       transition: .2s;
-    }
+  }
   
+  .card p{
+    margin: 8px;
+  }
  
   /* columns*/
   /* this will work when the float isnt on*/
@@ -151,13 +150,6 @@ a:hover{
     }
   }
   
-  /* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
-  @media screen and (max-width: 400px) {
-    .topnav a {
-      float: none;
-      width: 100%;
-    }
-  } 
 
   /* this makes the links within the description wrap accorinf to the flex direction*/
   .links{
@@ -173,9 +165,12 @@ a:hover{
   /*makes the topnav items flexbox*/
 
   .topnav2{
-    justify-content: left;
+    justify-content: center;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
   }
   
+  .card iframe{
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  }
